@@ -1,5 +1,6 @@
 package com.myce.auth.security.config;
 
+import com.myce.auth.security.util.JwtUtil;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -15,14 +16,23 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins( List.of( "https://www.myce.live", "https://myce.live", "https://media.myce.live", "http://localhost:3000", "http://localhost:5173", "http://localhost:8080", "http://localhost:8081", "https://api.myce.live" ) );
-        corsConfiguration.setAllowedMethods( List.of( "GET", "POST", "PUT", "DELETE", "OPTIONS" ) );
-        corsConfiguration.setAllowedHeaders( Collections.singletonList( "*" ) );
-        corsConfiguration.setAllowCredentials( true );
-        corsConfiguration.setExposedHeaders( List.of( "Authorization" ) );
+        corsConfiguration.setAllowedOrigins(List.of(
+                "https://www.myce.live",
+                "https://myce.live",
+                "https://media.myce.live",
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "http://localhost:8080",
+                "http://localhost:8081",
+                "https://api.myce.live"
+        ));
+        corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
+        corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setExposedHeaders(List.of(JwtUtil.AUTHORIZATION_HEADER));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration( "/**", corsConfiguration );
+        source.registerCorsConfiguration("/**", corsConfiguration);
 
         return source;
     }
